Fix more issues occurring while scaling grid elements Optimize and improve scaling-function Work a bit on the design --> on mobile, emoji list will be scrollable

--- a/local/stylesheets/scss/pix-grid-element.component.scss
+++ b/local/stylesheets/scss/pix-grid-element.component.scss
@@ -32,7 +32,7 @@ div.grid-element-inner {
   p.emoji {
     display: inline-block;
     width: 100%;
-    font-size: calc(1.25em + 4vw);
+    font-size: calc(1.25em + 3.5vmin);
     text-align: center;
     user-select: none;
     pointer-events: none;
